--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,8 +1,8 @@
 <!-- google analytics async -->
 <script type="text/javascript">
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-3769691-19']);
-  _gaq.push(['_setDomainName', 'github.com']);
+  _gaq.push(['_setAccount', 'UA-78298502-1']);
+  _gaq.push(['_setDomainName', 'aprender.mat.br']);
   _gaq.push(['_trackPageview']);
 
   (function() {
