--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,11 +3,8 @@
     <div class="row">
       <div class="col-md-5">
         <ul class="text-left">
-          <li>&copy; {{ site.time | date: '%Y' }} <span>GitHub</span>, Inc.</li>
-          <li><a href="https://github.com/site/terms">Terms</a></li>
-          <li><a href="https://training.github.com/kit/license.html">License</a></li>
-          <li><a href="https://github.com/security">Security</a></li>
-          <li><a href="https://training.github.com/contact">Contact</a></li>
+          <li>&copy; {{ site.time | date: '%Y' }} <span>Studio Maluta</span></li>
+          <li><a href="https://github.com/site/terms">(Baseado no template)</a></li>
         </ul>
       </div>
 
@@ -17,10 +14,7 @@
 
       <div class="col-md-5">
         <ul class="text-right">
-          <li><a href="https://twitter.com/GitHubTraining"><span class="octicon octicon-mark-twitter"></span>githubtraining</a></li>
-          <li><a href="https://status.github.com">Status</a></li>
-          <li><a href="https://github.com/blog">Blog</a></li>
-          <li><a href="https://github.com/about">About</a></li>
+          <li><a href="https://twitter.com/maluta"><span class="octicon octicon-mark-twitter"></span>@maluta</a></li>
         </ul>
       </div>
     </div>
