--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
     <div class="row">
       <div class="col-md-5">
         <ul class="text-left">
-          <li>&copy; {{ site.time | date: '%Y' }} <span>Studio Maluta</span></li>
-          <li><a href="https://github.com/site/terms">(Baseado no template)</a></li>
+          <li>{{ site.time | date: '%Y' }} <span>Baseado no template do</span></li>
+          <li><a href="https://services.github.com/kit/">Github</a></li>
         </ul>
       </div>
 
@@ -14,7 +14,7 @@
 
       <div class="col-md-5">
         <ul class="text-right">
-          <li><a href="https://twitter.com/maluta"><span class="octicon octicon-mark-twitter"></span>@maluta</a></li>
+          <li>Feito com <3 por <a href="https://twitter.com/maluta">@maluta</a></li>
         </ul>
       </div>
     </div>
