--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,7 @@
     <div class="row">
       <div class="col-md-5">
         <ul class="text-left">
-          <li>{{ site.time | date: '%Y' }} <span>Baseado no template do</span></li>
-          <li><a href="https://services.github.com/kit/">Github</a></li>
+          <li>{{ site.time | date: '%Y' }} <span>Baseado no template do </span><a href="https://services.github.com/kit/">Github</a></li>
         </ul>
       </div>
 
