--- a/_includes/top.html
+++ b/_includes/top.html
@@ -9,18 +9,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <div id="logo"><a href="{{ site.url }}/" data-escp="">GitHub Training</a></div>
+        <div id="logo"><a href="{{ site.url }}/" data-escp="">Aprender Matemática</a></div>
       </div>
 
       <div class="col-md-9 col-sm-10">
         <div class="collapse navbar-collapse navbar-right" id="main-navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
+            <!--
             <li><a{% if page.body_class == 'trainers' %} class="active"{% endif %} href="{{ site.url }}/trainers/">Trainers</a></li>
             <li><a{% if page.body_class == 'classes' %} class="active"{% endif %} href="{{ site.url }}/classes/">Classes</a></li>
             <li><a{% if page.body_class == 'schedule' %} class="active"{% endif %} href="{{ site.url }}/schedule/">Schedule</a></li>
             <li><a class="active" href="{{ site.url }}/kit/">Kit</a></li>
             <li><a{% if page.body_class == 'contact' %} class="active"{% endif %} href="{{ site.url }}/contact/">Contact</a></li>
-          </ul>
+          --></ul>
         </div>
       </div>
     </div>
