--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -4,7 +4,7 @@ layout: bare
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{% if page.html_title %}{{ page.html_title }} • {% endif %}GitHub Training</title>
+  <title>{% if page.html_title %}{{ page.html_title }} • {% endif %}Aprender Matemática</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="{{ page.leadingpath }}_stylesheets/page.css">
 
