--- a/_includes/top.html
+++ b/_includes/top.html
@@ -3,12 +3,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3 col-sm-2">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar-collapse">
+        <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button>
+        </button>-->
         <div id="logo"><a href="{{ site.url }}/" data-escp="">Aprender Matemática</a></div>
       </div>
 
@@ -42,9 +42,9 @@
               <div class="col-md-6">
                 <a href="{{ site.baseurl }}{{ course.url }}">
                   <div class="panel">
-                    {% if course.title == "GitHub for Developers" %}
+                    {% if course.title == "Ensino Fundamental" %}
                       <span class="octicon octicon-terminal"></span>
-                    {% elsif course.title == "GitHub for Everyone" %}
+                    {% elsif course.title == "Ensino Médio" %}
                       <span class="octicon octicon-organization"></span>
                     {% endif %}
                     <h4>{{ course.title }}</h4>
