--- a/_includes/top.html
+++ b/_includes/top.html
@@ -43,7 +43,7 @@
                 <a href="{{ site.baseurl }}{{ course.url }}">
                   <div class="panel">
                     {% if course.title == "Ensino Fundamental" %}
-                      <span class="octicon octicon-terminal"></span>
+                      <span class="octicon octicon-organization"></span>
                     {% elsif course.title == "Ensino Médio" %}
                       <span class="octicon octicon-organization"></span>
                     {% endif %}
