--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,12 +8,12 @@
       </div>
 
       <div class="col-md-2">
-        
+
       </div>
 
       <div class="col-md-5">
         <ul class="text-right">
-          <li>Feito com <3 por <a href="https://twitter.com/maluta">@maluta</a></li>
+          <li>Feito com ❤ por <a href="https://twitter.com/maluta">@maluta</a></li>
         </ul>
       </div>
     </div>
