--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-5">
         <ul class="text-left">
-          <li>{{ site.time | date: '%Y' }} <span>Baseado no template do </span><a href="https://services.github.com/kit/">Github</a></li>
+          <li>&copy; {{ site.time | date: '%Y' }} <span>Baseado no template do </span><a href="https://services.github.com/kit/">Github</a><span> e nos vídeos da <a href="http://pt.khanacademy.org">Khan Academy</a></span></li>
         </ul>
       </div>
 
