--- a/_includes/top.html
+++ b/_includes/top.html
@@ -5,8 +5,8 @@
       <div class="col-md-3 col-sm-2">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar-collapse">
           <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar">..</span>
-          <span class="icon-bar">..</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
         <div id="logo"><a href="{{ site.url }}/" data-escp="">Aprender Matemática</a></div>
@@ -14,13 +14,10 @@
 
       <div class="col-md-9 col-sm-10">
         <div class="collapse navbar-collapse navbar-right" id="main-navbar-collapse">
-          <!--<ul class="nav navbar-nav navbar-right">
-            <li><a{% if page.body_class == 'trainers' %} class="active"{% endif %} href="{{ site.url }}/trainers/">Trainers</a></li>
-            <li><a{% if page.body_class == 'classes' %} class="active"{% endif %} href="{{ site.url }}/classes/">Classes</a></li>
-            <li><a{% if page.body_class == 'schedule' %} class="active"{% endif %} href="{{ site.url }}/schedule/">Schedule</a></li>
-            <li><a class="active" href="{{ site.url }}/kit/">Kit</a></li>
-            <li><a{% if page.body_class == 'contact' %} class="active"{% endif %} href="{{ site.url }}/contact/">Contact</a></li>
-          </ul>-->
+          <ul class="nav navbar-nav navbar-right">
+            <li><a class="active" href="http://aprender.mat.br/courses/ensino-fundamental">Ensino Fundamental</a></li>
+            <li><a class="active" href="http://aprender.mat.br/courses/ensino-medio">Ensino Médio</a></li>
+          </ul>
         </div>
       </div>
     </div>
