--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -14,7 +14,7 @@ layout: site
       <div class="row">
         <div class="col-md-12">
 
-        <h3>Sections</h3>
+        <h3>Conteúdos</h3>
           {% for section in page.sections %}
             <div class="screen">
               <h4>{{ section.title }}</h4>
