--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -19,7 +19,7 @@ layout: site
             <div class="screen">
               <h4>{{ section.title }}</h4>
               <p>{{ section.description }}</p>
-              <h5>Modules</h5>
+              <h5>Tópicos</h5>
               <ul>
                 {% for module in section.modules %}
 
