--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -176,6 +176,12 @@ layout: site
               </table></br>
             </div>
 
+            {% when 'video-youtube' %}
+
+            <p>
+              {{ video-youtube.title }}
+            </p>
+
             {% when 'lab' %}
             <div class="lab panel panel-primary">
               <div class="panel-heading">
