--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -180,6 +180,9 @@ layout: site
 
             <p>
               {{ video-youtube.title }}
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ video-slide.id }}" allowfullscreen></iframe>
+              </div>
             </p>
 
             {% when 'lab' %}
