--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -181,7 +181,7 @@ layout: site
             <p>
               {{ video-youtube.title }}
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ video-youtube.id }}" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/"{{ video-youtube.id }} allowfullscreen></iframe>
               </div>
             </p>
 
