--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -178,9 +178,9 @@ layout: site
 
             {% when 'video-youtube' %}
 
-            <p>{{ video-youtube.title }}</p>
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/"{{ video-youtube.id }} allowfullscreen></iframe>
-
+            <p>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/"{% video-youtube.id %} allowfullscreen></iframe>
+            </p>
 
             {% when 'lab' %}
             <div class="lab panel panel-primary">
