--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -179,7 +179,7 @@ layout: site
             {% when 'video-youtube' %}
 
             <p>
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/"{% video-youtube.id %} allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/"{% id.video-youtube %} allowfullscreen></iframe>
             </p>
 
             {% when 'lab' %}
