--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -178,8 +178,8 @@ layout: site
 
             {% when 'video-youtube' %}
 
-            <p>
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/"{% id.video-youtube %} allowfullscreen></iframe>
+            <p>.
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{% video-youtube.id %}" allowfullscreen></iframe>
             </p>
 
             {% when 'lab' %}
