--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -180,9 +180,17 @@ layout: site
 
             <p>
               ..
-              {{ item[1].yt_title }}
-              {{ item[1].yt_id }}
-              ..
+              <h3>{{ item[1].yt_title }}</h3>
+              <br>
+              1
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
+              <br>
+              2
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/"{{ item[1].yt_id }} allowfullscreen></iframe>
+              <br>
+              3
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{% item[1].yt_id %}" allowfullscreen></iframe>
+              <br>..
             </p>
 
 
