--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -182,9 +182,9 @@ layout: site
               ..
               <h3>{{ item[1].yt_title }}</h3>
               <br>
-              
+
               3
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{% item[1].yt_id %}" allowfullscreen></iframe>
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
               <br>..
             </p>
 
