--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -178,14 +178,10 @@ layout: site
 
             {% when 'video-youtube' %}
 
-            <p>
-              ..
-              <h3>{{ item[1].yt_title }}</h3>
+            <p><h3>{{ item[1].yt_title }}</h3></p>
               <br>
-
-              3
               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
-              <br>..
+              <br>
             </p>
 
 
