--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -180,7 +180,7 @@ layout: site
 
             <p><h3>{{ item[1].yt_title }}</h3></p>
               <br>
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
+              <iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
               <br>
             </p>
 
