--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -178,11 +178,13 @@ layout: site
 
             {% when 'video-youtube' %}
 
+            <div class="slide">
             <p><h3>{{ item[1].yt_title }}</h3></p>
               <br>
               <iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
               <br>
-            </p>
+
+          </div>
 
 
             {% when 'lab' %}
@@ -232,7 +234,7 @@ layout: site
         </ul>
       </div>
 
-      <h4>Courses</h4>
+      <!-- <h4>Courses</h4>
       <ul id="toc-list" class="nav nav-pills nav-stacked" role="tablist">
         {% for course in site.courses %}
             <a href="{{ site.baseurl }}{{ course.url }}"><li class="headingSep">{{ course.title }}</li></a>
@@ -249,7 +251,7 @@ layout: site
           <input type="checkbox" name="timer-check" id="timer-check" class="timer-check" value="true">
           <label for="timer-check" class="timer-label" data-toggle="modal" data-target="#timerModal">Timer</label>
         </li>
-      </ul>
+      </ul> -->
     </div>
   </div>
 </div>
