--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -105,14 +105,14 @@ layout: site
     </div>
   </div>
 
-      <div class="slide">
+<!--      <div class="slide">
         <div class="alignment">
           <h1>{{ page.title }}</h1>
           <p>
             {{ page.learning-objective }}
           </p>
         </div>
-      </div>
+      </div> -->
 
       {% for screen in page.screens %}
       <div class="slide {{ screen.first[0] }}">
