--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -113,6 +113,10 @@ layout: site
           </p>
         </div>
       </div> -->
+      <p>
+        {{ page.learning-objective }}
+      </p>
+
 
       {% for screen in page.screens %}
       <div class="slide {{ screen.first[0] }}">
