--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -113,10 +113,11 @@ layout: site
           </p>
         </div>
       </div> -->
+      <div>
       <p>
         {{ page.learning-objective }}
       </p>
-
+      </div>
 
       {% for screen in page.screens %}
       <div class="slide {{ screen.first[0] }}">
