--- a/_includes/top.html
+++ b/_includes/top.html
@@ -23,7 +23,7 @@
     </div>
 
     {% if page.title %}
-      <h2>{{ page.title }} x</h2>
+      <h2>{{ page.title }}</h2>
       {% if page.byline %}<p>{{ page.byline }}</p>{% endif %}
     {% endif %}
 
