--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -113,7 +113,7 @@ layout: site
           </p>
         </div>
       </div> -->
-      <div>
+      <div class="aligment">
       <p>
         {{ page.learning-objective }}
       </p>
