--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -113,12 +113,13 @@ layout: site
           </p>
         </div>
       </div> -->
+      <div class="slide">
       <div class="aligment">
       <p>
         {{ page.learning-objective }}
       </p>
       </div>
-
+      </div>
       {% for screen in page.screens %}
       <div class="slide {{ screen.first[0] }}">
         <div class="alignment">
