--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -11,3 +11,12 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 </script>
+
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8123035018804806",
+    enable_page_level_ads: true
+  });
+</script>
