--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -180,11 +180,11 @@ layout: site
 
             <div class="slide">
             <p><h3>{{ item[1].yt_title }}</h3></p>
-              <p>{{ item[1].yt_desc }}</p>
+              <p>{{ item[1].yt_desc1 }}</p>
               <br>
               <iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
               <br>
-              {{ item[1].yt_desc }}
+              {{ item[1].yt_desc2 }}
           </div>
 
 
