--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -184,7 +184,7 @@ layout: site
               <br>
               <iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
               <br>
-              {{ item[1].yt_desc2 }}
+              Faça um <a href="{{ item[1].yt_desc2 }}?utm_source=AprendaMATBR&utm_medium=blog&utm_campaign=Organic">Exercício</a> agora mesmo na Khan Academy! 
           </div>
 
 
