--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -183,8 +183,8 @@ layout: site
               <p>{{ item[1].yt_desc1 }}</p>
               <br>
               <iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
-              <br>
-              Faça um <a href="{{ item[1].yt_desc2 }}?utm_source=AprendaMATBR&utm_medium=blog&utm_campaign=Organic">Exercício</a> agora mesmo na Khan Academy! 
+              <br><br>
+              Faça um <b><a href="{{ item[1].yt_desc2 }}?utm_source=AprendaMATBR&utm_medium=blog&utm_campaign=Organic">Exercício</a></b> agora mesmo na Khan Academy! 
           </div>
 
 
