--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -182,10 +182,12 @@ layout: site
             <p><h3>{{ item[1].yt_title }}</h3></p>
               <p>{{ item[1].yt_desc1 }}</p>
               <br>
-              <iframe width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
+              <div class="video-container">
+                <iframe frameborder="0" width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
+              </div>
               <br><br>
               <p>
-              Faça um <b><a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Exercício</a></b> agora mesmo na Khan Academy!</p> 
+              Faça um <b><a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Exercício</a></b> agora mesmo na Khan Academy!</p>
           </div>
 
 
