--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -187,7 +187,7 @@ layout: site
               </div>
               <br><br>
               <p>
-              Faça um <b><a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Exercício</a></b> agora mesmo na Khan Academy!</p>
+              Faça um <b><a href="{{ item[1].yt_desc2 }}&rel=0?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Exercício</a></b> agora mesmo na Khan Academy!</p>
           </div>
 
 
