--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -183,12 +183,12 @@ layout: site
               <p>{{ item[1].yt_desc1 }}</p>
               <br>
               <div class="video-container">
-                <iframe frameborder="0" width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}" allowfullscreen></iframe>
+                <iframe frameborder="0" width="560" height="315" class="embed-responsive-item" src="https://www.youtube.com/embed/{{ item[1].yt_id }}?rel=0" allowfullscreen></iframe>
               </div>
               <br><br>
               <p>
               <button type="button" class="btn btn-success" href="{{ item[1].yt_desc2 }}&rel=0?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Fazer Exercício</button>
-              Faça um <b><a href="{{ item[1].yt_desc2 }}&rel=0?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Exercício</a></b> agora mesmo na Khan Academy!</p>
+              Faça um <b><a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Exercício</a></b> agora mesmo na Khan Academy!</p>
           </div>
 
 
