--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -178,7 +178,7 @@ layout: site
 
             {% when 'video-youtube' %}
 
-            <div class="slide">
+            <div class="narration-table">
             <p><h3>{{ item[1].yt_title }}</h3></p>
               <p>{{ item[1].yt_desc1 }}</p>
               <br>
