--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -187,7 +187,7 @@ layout: site
               </div>
               <br><br>
               <p>
-              <button type="button" class="btn btn-success" href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Fazer Exercício</button>
+              <button type="button" class="btn btn-success btn-link" href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Fazer Exercício</button>
               Faça um <b><a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Exercício</a></b> agora mesmo na Khan Academy!</p>
           </div>
 
