--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -188,6 +188,7 @@ layout: site
               <br><br>
               <p>
               <button type="button" class="btn btn-success btn-link" href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Fazer Exercício</button>
+              <a href="http://maluta.github.io" role="button" class="btn btn-success btn-large">Click here!</a>
               Faça um <b><a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Exercício</a></b> agora mesmo na Khan Academy!</p>
           </div>
 
