--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -178,8 +178,8 @@ layout: site
 
             {% when 'video-youtube' %}
 
-            <div class="narration-table">
-            <p><h3>{{ item[1].yt_title }}</h3></p>
+            <div class="screen">
+            <p><h4>{{ item[1].yt_title }}</h4></p>
               <p>{{ item[1].yt_desc1 }}</p>
               <br>
               <div class="video-container">
