--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -187,8 +187,8 @@ layout: site
               </div>
               <br><br>
               <p>
-              <a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY" role="button" class="btn btn-success btn-large" style="color:white;">Fazer um Exercício</a>
-              Faça um <b><a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY">Exercício</a></b> agora mesmo na Khan Academy!</p>
+              Faça um<a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY" role="button" class="btn btn-success btn-large" style="color:white;">Exercício</a> agora mesmo na Khan Academy!
+              </p>
           </div>
 
 
