--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -187,7 +187,7 @@ layout: site
               </div>
               <br><br>
               <p>
-              Faça um<a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY" role="button" class="btn btn-success btn-large" style="color:white;">Exercício</a> agora mesmo na Khan Academy!
+              Faça um&nbsp;<a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY" role="button" class="btn btn-success btn-large" style="color:white;">Exercício</a> agora mesmo na Khan Academy!
               </p>
           </div>
 
