--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -2,6 +2,18 @@
 layout: site
 ---
 
+
+<div class="col-content col-md-12 col-sm-12 col-xs-12 materials shift-left">
+
+<!--      <div class="slide">
+        <div class="alignment">
+          <h1>{{ page.title }}</h1>
+          <p>
+            {{ page.learning-objective }}
+          </p>
+        </div>
+      </div> -->
+
       {% for screen in page.screens %}
       <div class="slide {{ screen.first[0] }}">
         <div class="alignment">
@@ -77,8 +89,6 @@ layout: site
               <p>
               Faça um&nbsp;<a href="{{ item[1].yt_desc2 }}?utm_source=APRENDAMATBR&utm_medium=BLOG&utm_campaign=THIRDPARTY" role="button" class="btn btn-success btn-large" style="color:white;font-family:arial" target="_blank">Exercício</a> agora mesmo na Khan Academy!
               </p>
-              <br>
-              <br>
           </div>
 
 
