--- a/_layouts/module.html
+++ b/_layouts/module.html
@@ -3,7 +3,7 @@ layout: site
 ---
 
 
-<div class="col-content col-md-12 col-sm-12 col-xs-12 materials shift-left">
+<div class="col-content deck col-md-12 col-sm-12 col-xs-12 materials curriculum">
 
 <!--      <div class="slide">
         <div class="alignment">
